After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 679671 - Misc fixes for g_dbus_node_info_new_for_xml
Misc fixes for g_dbus_node_info_new_for_xml
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gdbus
unspecified
Other All
: Normal normal
: ---
Assigned To: David Zeuthen (not reading bugmail)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-07-10 09:46 UTC by Rui Matos
Modified: 2012-07-11 13:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GDBusNodeInfo: the XML string must contain exactly one node element (967 bytes, patch)
2012-07-10 09:46 UTC, Rui Matos
reviewed Details | Review
GDBusNodeInfo: remove a spurious for loop (924 bytes, patch)
2012-07-10 09:46 UTC, Rui Matos
committed Details | Review
GDBusNodeInfo: the XML string must contain exactly one node element (1012 bytes, patch)
2012-07-11 01:28 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2012-07-10 09:46:29 UTC
Please see the attached patches. Nothing serious, just drive-by cleanups.
Comment 1 Rui Matos 2012-07-10 09:46:32 UTC
Created attachment 218404 [details] [review]
GDBusNodeInfo: the XML string must contain exactly one node element

Make the documentation clear about this.
Comment 2 Rui Matos 2012-07-10 09:46:35 UTC
Created attachment 218405 [details] [review]
GDBusNodeInfo: remove a spurious for loop
Comment 3 Matthias Clasen 2012-07-11 00:27:02 UTC
Review of attachment 218404 [details] [review]:

::: gio/gdbusintrospection.c
@@ +1760,3 @@
  * parser that only accepts a subset of valid XML documents.
  *
+ * The XML data must contain exactly one toplevel <node> element.

I think you want <tag class="starttag">node</tag> here, otherwise it will be interpreted as docbook markup, and that won't go well.
Comment 4 Matthias Clasen 2012-07-11 00:27:45 UTC
Review of attachment 218405 [details] [review]:

looks right
Comment 5 Rui Matos 2012-07-11 01:28:55 UTC
Created attachment 218496 [details] [review]
GDBusNodeInfo: the XML string must contain exactly one node element

--
Ah right, fixed.
Comment 6 Matthias Clasen 2012-07-11 12:48:32 UTC
Review of attachment 218496 [details] [review]:

ok
Comment 7 Rui Matos 2012-07-11 13:22:34 UTC
Comment on attachment 218496 [details] [review]
GDBusNodeInfo: the XML string must contain exactly one node element

Attachment 218496 [details] pushed as 6f23c33 - GDBusNodeInfo: the XML string must contain exactly one node element
Comment 8 Rui Matos 2012-07-11 13:22:48 UTC
Attachment 218405 [details] pushed as eda1735 - GDBusNodeInfo: remove a spurious for loop