GDBusNodeInfo: the XML string must contain exactly one node element

Make the documentation clear about this.

https://bugzilla.gnome.org/show_bug.cgi?id=679671